--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <jakartaee>10.0.0</jakartaee>
     </properties>
     
-    <dependencies>
+ <dependencies>
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
@@ -26,6 +26,12 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.3.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
         </dependency>
         
     </dependencies>
